# pyteenybrisque

./: .gitignore  .pre-commit-config.yaml  LICENSE  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  docs.yml  publish.yml  tag.yml
docs/: index.md
docs/getting-started/: installation.md
docs/reference/: changelog.md
pyteenybrisque/: __init__.py  _alpha.py  _features.py  _gaussian.py  _resize.py  _svr.py
pyteenybrisque/_weights/: alpha.npz  svm.npz
tests/: test_against_pyiqa.py
tools/: benchmark_metrics.py  build_alpha_tables.py  build_test_fixtures.py  extract_pyiqa_weights.py
